# xet-server

./: .gitignore  Cargo.toml  HF_XET_INTEGRATION_GUIDE.md  README.md  async_sqlite_migration_analysis.md  cas_sqlite_dependency_analysis.md
.cargo/: audit.toml
benches/: bench_chunking.rs  bench_hash.rs
docs/: CAS_STATE_DB_PATH_ROLLBACK.md  CONFIG_FIXES_PHASE1.md  DOCUMENTATION_SYNC_COMPLETION_REPORT.md  DOCUMENTATION_SYNC_COMPLETION_REPORT_2026_06_15.md  README.md  architecture.md  configuration.md
docs/api/: authentication.md  cas-api.md  hub-api.md
docs/gc/: architecture.md  configuration.md  migration.md
docs/superpowers/plans/: 2026-06-09-metrics-dead-code-fix.md  2026-06-09-xet-server-hf-testing.md  2026-06-10-cas-modifications.md  2026-06-10-hub-api-service.md  2026-06-13-config-rationality-analysis.md  2026-06-15-security-integrity-fixes.md  2026-06-16-remove-gc-module.md
docs/superpowers/specs/: 2026-06-09-metrics-dead-code-fix-design.md  2026-06-09-xet-server-hf-testing-design.md  2026-06-10-hf-hub-api-design.md  2026-06-13-config-rationality-analysis-design.md  2026-06-14-incremental-gc-bloom-filter-design.md  2026-06-15-security-integrity-fixes-design.md  2026-06-16-remove-gc-module-design.md
hub/: Cargo.toml
hub/src/: config.rs  error.rs  lib.rs  main.rs  migrations.rs  server.rs  sqlite_pool.rs
hub/src/api/: commit.rs  internal.rs  lfs_proxy.rs  mod.rs  preupload.rs  repo.rs  resolve.rs  shared.rs  token_exchange.rs  tree.rs  whoami.rs
hub/src/api/commit/: content.rs  id.rs  types.rs  validation.rs
hub/src/api/lfs_proxy/: batch.rs  oid.rs  streaming.rs  tokens.rs
hub/src/auth/: extract.rs  mod.rs  token_store.rs  xet_signer.rs
hub/src/cas_client/: mod.rs
hub/src/commit/: content.rs  id.rs  mod.rs  types.rs  validation.rs
hub/src/lfs_proxy/: batch.rs  mod.rs  oid.rs  streaming.rs  tokens.rs
hub/src/metadata/: mod.rs  sqlite.rs
hub/src/services/: commit.rs  lfs_batch.rs  lfs_object.rs  lfs_upload.rs  mod.rs  preupload.rs  repo.rs  resolve.rs  shared.rs  token_exchange.rs  tree.rs  whoami.rs
hub/tests/: test_config_contract.rs  test_integration.rs  test_lfs_proxy_auth_contract.rs  test_metadata.rs  test_migrations.rs  test_resolve_auth_contract.rs  test_streaming_upload.rs
scripts/: final-comprehensive-test.sh  generate-ed25519-token.py  generate-jwt-token.py  run-download-test.sh  run-upload-test.sh  setup-git-repo.sh  setup-test-env.sh  test-api-direct.py  test-comprehensive-lfs.sh  test-hf-xet-legacy.py  test-hf-xet-session.py  test-hf-xet-upload-download.py  test-hf-xet-workflow.sh  test-integration.py  validate-metrics.sh
src/: config.rs  error.rs  index.rs  lib.rs  main.rs  metrics.rs  middleware.rs  reconstruction_io.rs  reconstruction_plan.rs  server.rs  shard_validation.rs  xorb_reader.rs
src/api/: auth.rs  batch.rs  gc.rs  global_dedup.rs  guard.rs  internal.rs  lfs.rs  mod.rs  reconstruction.rs  shard.rs  xorb.rs
src/api/lfs/: raw.rs  reconstruction.rs
src/chunking/: cdc.rs  mod.rs
src/conversion/: converting_oids.rs  mod.rs
src/format/: compression.rs  io_utils.rs  mod.rs  shard.rs  shard_builder.rs  xorb.rs  xorb_builder.rs
src/gc/: bloom.rs  checkpoint.rs  coordinator.rs  errors.rs  grace.rs  mod.rs  scanner.rs
src/gc/reference_tracker/: mod.rs  s3.rs
src/hash/: blake3_hash.rs  merkle_tree.rs  mod.rs
src/state/: mod.rs  sqlite.rs
src/storage/: local.rs  mod.rs  s3.rs
src/types/: merkle_hash.rs  mod.rs
src/util/: disk.rs  mod.rs  streaming_hash.rs  temp_file.rs
tests/: test_advanced_api.rs  test_api.rs  test_auth.rs  test_cdc.rs  test_compression.rs  test_config.rs  test_conversion.rs  test_doc_contract.rs  test_download_tracking.rs  test_e2e.rs  test_format_integration.rs  test_hash_functions.rs  test_integration.rs  test_internal_api.rs  test_io_utils.rs  test_merkle_hash.rs  test_merkle_tree.rs  test_metrics.rs  test_middleware.rs  test_shard_format.rs  test_state.rs  test_storage.rs  test_streaming_upload.rs  test_token_wire_contract.rs  test_xorb_format.rs  test_xorb_verification.rs
tests/common/: mod.rs
tests/config/: gc_config_test.rs
tests/gc/: errors_test.rs
xet-auth-types/: Cargo.toml
xet-auth-types/src/: lib.rs
