[package]
name = "xet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8"
gearhash = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
lz4_flex = "0.11"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "bench_hash"
harness = false

[[bench]]
name = "bench_chunking"
harness = false