[package]
name = "xet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8"
gearhash = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
lz4_flex = "0.11"
tokio = { version = "1.36", features = ["full"] }
actix-web = "4.5"
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.5"
jsonwebtoken = "9.2"
aws-sdk-s3 = "1.15"
aws-config = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
base64 = "0.22"
futures-util = "0.3"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
tempfile = "3.10"
serial_test = "3.0"

[[bench]]
name = "bench_hash"
harness = false

[[bench]]
name = "bench_chunking"
harness = false