[workspace]
members = [".", "hub", "xet-auth-types"]
resolver = "2"

[package]
name = "xet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
xet-auth-types = { path = "xet-auth-types" }
blake3 = "1.8"
sha2 = "0.10"
gearhash = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
lz4_flex = "0.11"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
actix-web = "4.5"
serde_json = "1.0"
bincode = "1.3"
async-trait = "0.1"
bytes = "1.5"
aws-sdk-s3 = { version = "1.15", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
base64 = "0.22"
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["pem", "rand_core", "pkcs8"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
actix-governor = "0.5"
nix = { version = "0.29", features = ["fs"] }
url = "2.5"
tempfile = "3.10"
bloomfilter = "1.0.8"
crc32fast = "1.3"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
tempfile = "3.10"
serial_test = "3.0"

[[test]]
name = "errors_test"
path = "tests/gc/errors_test.rs"

[[test]]
name = "gc_config_test"
path = "tests/config/gc_config_test.rs"

[[bench]]
name = "bench_hash"
harness = false

[[bench]]
name = "bench_chunking"
harness = false
