[package]
name = "hub-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hub-api"
path = "src/main.rs"

[dependencies]
actix-web = "4.5"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["pem", "rand_core", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
bytes = "1.5"
futures-util = "0.3"
url = "2.5"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[dev-dependencies]