[package]
name = "hub-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hub-api"
path = "src/main.rs"

[dependencies]
xet-auth-types = { path = "../xet-auth-types" }
actix-web = "4.5"
actix-governor = "0.5"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SQLx for async SQLite with bundled sqlite
# Use bundled feature to compile sqlite from source and avoid conflicts with rusqlite
# Local SQLite only — no network TLS needed. Dropping runtime-tokio-rustls also removes
# the vulnerable rustls 0.21 / rustls-webpki 0.101 chain and the phantom mysql/rsa deps.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
ed25519-dalek = { version = "2", features = ["pem", "rand_core", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
bytes = "1.5"
futures-util = "0.3"
pin-project = "1.1"
url = "2.5"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[dev-dependencies]